LASB-1066: Updated the FinancialAssessmentHistoryServiceTests and the test data builders to cover the entity relationship changes.